<resources>
    <string name="app_name">Games Collection</string>
    <string name="app_logo">app logo</string>
    <string name="title_activity_wordle">WordleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="playButton">Start</string>
    <string name="restartButton">Neustart</string>
    <string name="easyButton">Einach</string>
    <string name="hardButton">Schwer</string>
    <string name="playerOneScore">Spieler x</string>
    <string name="playerTwoScore">Spieler o</string>


    <string name="title_activity_nsd_prototype">NsdPrototype</string>
    <string name="playButtonLabel">Play</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="Schwierigkeit">Schwierigkeit</string>
    <string name="Schwierigkeitsauswahl">Wähle deine Schwierigkeit</string>
</resources>